MDEV-20335: Extra trans_commit_stmt after rollback caused by incorrect fix of MDEV-14401

Fix incorrect else that should have been else if.